# GPACalculator-

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml
.claude/: settings.local.json
.github/workflows/: backend-deploy.yml  ci.yml  tests.yml
backend/: requirements.txt
backend/app/: config.py  constants.py  exceptions.py  main.py
backend/app/api/: endpoints.py
backend/app/models/: course.py
backend/app/services/: file_validator.py  gpa_calculator.py  parser.py  transcript_parser.py  validation.py
backend/app/utils/: exception_handler.py  exceptions.py  file_validator.py  logger.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_constants.py  test_file_validator.py  test_foundation.py  test_gpa.py  test_integration.py  test_models.py  test_parser.py  test_rate_limiting.py
frontend/: index.html
frontend/src/: App.css  App.jsx  api_calls.js  components.jsx
frontend/src/components/: CourseEdit.jsx  FileUploader.jsx  Header.jsx
